Colaboratory를 통해 생성됨

--- a/221024_ch02.ipynb
+++ b/221024_ch02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMLSXRbbjmfgE71Zt1WawTO",
+      "authorship_tag": "ABX9TyMdOhqPWAll7/e8QM/ce/Qm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,20 +29,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iTRHvNWCBi3I",
-        "outputId": "fdd9e226-68e5-43bd-84b1-7e16ffdd112e"
+        "outputId": "2f8d28be-d3b9-43f2-e720-1b4e43d93e5b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RgQpjvCNBmma",
-        "outputId": "2cca9ab4-fb61-45c8-c7ea-0c5cbbb33aa3"
+        "outputId": "3c6a333a-3bb4-41b0-9024-2880648263d1"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,35 +86,130 @@
       "metadata": {
         "id": "7TprgfjtCgAf"
       },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_census = pd.read_csv('census_cleaned.csv')"
+      ],
+      "metadata": {
+        "id": "TvgN4HzvCoM9"
+      },
       "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df_census = pd.read.csv('census_cleaned.csv')"
+        "x = df_census.iloc[:,:-1]\n",
+        "y = df_census.iloc[:,-1]"
+      ],
+      "metadata": {
+        "id": "O6xUJMIIk8TL"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=2)"
+      ],
+      "metadata": {
+        "id": "qYMJbwl_lD5n"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# accuracy_score()는 맞는횟수 / 전체횟수\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score"
+      ],
+      "metadata": {
+        "id": "UJDrKj0alXVp"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 로지스틱회귀분석과 비슷하게 해주기 위하여 random_state=2로 세팅\n",
+        "clf = DecisionTreeClassifier(random_state=2)"
+      ],
+      "metadata": {
+        "id": "Pgmj-DdWlhmh"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.fit(x_train, y_train)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 295
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "TvgN4HzvCoM9",
-        "outputId": "e52b4ff3-7a36-4521-dcac-8c7834b3d0d0"
+        "id": "V-aJo3d2l0OL",
+        "outputId": "b23cddc9-b7ff-4602-923c-2d8e58bf8e4c"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-c9b2c87180b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_census\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'census_cleaned.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    242\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_SparseArray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 244\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"module 'pandas' has no attribute '{name}'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    245\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'read'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DecisionTreeClassifier(random_state=2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = clf.predict(x_test)"
+      ],
+      "metadata": {
+        "id": "pEOlKLQkl3HE"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 동일한 데이터셋으로 1장에서 로지스틱 회귀의 정확도와 거의 비슷함\n",
+        "accuracy_score(y_pred, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vXtgu44Gl6Au",
+        "outputId": "2ecec8eb-497f-486e-aa50-5a70e1be82f2"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8131679154894976"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
